src/objects/Translation_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Count__c</fullName>
        <label>Tényleges mennyiség</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Status__c</fullName>
        <label>Megbízási státusz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kiadva</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Teljesítve</fullName>
                </value>
                <value>
                    <fullName>Megrendelés visszavonva</fullName>
                </value>
                <value>
                    <fullName>Megreklamálva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents__c</fullName>
        <label>Dokumentumok</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Határidő</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimated_Count__c</fullName>
        <label>Az ajánlat alapját képező mennyiség</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Express__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expressz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Befejezve</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Language_Pair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nyelvpár</label>
        <referenceTo>Language_Pair__c</referenceTo>
        <relationshipLabel>Translation Assignments</relationshipLabel>
        <relationshipName>Translation_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Üzenet</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Postpaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fizetés utólag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>A reklamáció oka</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <label>Megkezdve</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Feladat</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Translating</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Proofreading</fullName>
                </value>
                <value>
                    <fullName>Editing</fullName>
                </value>
                <value>
                    <fullName>Supervising</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation__c</fullName>
        <label>Megrendelés</label>
        <referenceTo>Translation__c</referenceTo>
        <relationshipLabel>Fordítási megbízások</relationshipLabel>
        <relationshipName>Translation_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Translator_Estimated_Price__c</fullName>
        <label>Becsült fordítói díj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translator_Price__c</fullName>
        <label>Fordítói díj</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translator__c</fullName>
        <label>Fordító</label>
        <referenceTo>Translator__c</referenceTo>
        <relationshipLabel>Fordítási megbízások</relationshipLabel>
        <relationshipName>Translation_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Unit_Wage__c</fullName>
        <label>Unit Wage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sürgős</label>
        <type>Checkbox</type>
    </fields>
    <label>Fordítói megbízás</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cant_be_Express_and_Urgent</fullName>
        <active>true</active>
        <description>An assignment can&apos;t be urgent and express at the same time</description>
        <errorConditionFormula>Urgent__c &amp;&amp; Express__c</errorConditionFormula>
        <errorDisplayField>Urgent__c</errorDisplayField>
        <errorMessage>An assignment can&apos;t be urgent and express at the same time</errorMessage>
    </validationRules>
</CustomObject>